# copier_exam

./: .gitignore  README.md  copier_exam.py  pyproject.toml
my_template/: copier.yml  file-{{project_number}}.txt.jinja
